refactor(components): clean old commented code from adminSelectors

--- a/components/_adminSelectorsMulti.qmd
+++ b/components/_adminSelectorsMulti.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: Admin Selectors (MultiSelect)
+module: Admin Selectors (MultiSelect)
 created: "2025-11-25"
 updated: "2025-11-25"
 ---
@@ -92,35 +92,6 @@ dataAdmin1 = allAdmin1.filter(d =>
   admin0Select.some(a0 => a0.iso3c === d.iso3)
 );
 
-// admin1Cache = new Map();
-// 
-// dataAdmin1 = {
-//   const regions = await adminDB.query(`
-//     SELECT DISTINCT admin0_name, admin1_name, iso3
-//     FROM admin_lookup
-//     WHERE iso3 in ('${admin0Select.map((d) => d.iso3c).join("', '")}')
-//   `);
-// 
-//   //HACK: We need to cache and reuse the old selected rows, as the inputs compare
-//   //JS objects not the values and the db query returns new objects each time.
-//   // Otherwise, the multiselect will clear values when a new country is selected
-//   function stable(obj) {
-//     const key = `${obj.iso3}|${obj.admin1_name ?? "FULL"}`;
-//     if (!admin1Cache.has(key)) admin1Cache.set(key, obj);
-//     return admin1Cache.get(key);
-//   }
-// 
-//   const fullCountryRows = admin0Select.map((d) =>
-//     stable({
-//       admin0_name: d.admin0_name,
-//       admin1_name: null,
-//       iso3: d.iso3c
-//     })
-//   );
-// 
-//   return [...fullCountryRows, ...regions.map(stable)];
-// };
-
 viewof admin1Select = Inputs.input([])
 
 renderA1Multi = ({maxSelections = Infinity, requireAtLeastOne = false} = {}) => {
@@ -183,7 +154,6 @@ function setSelectorValue(input, value) {
   if (a1NoMatch) {
     // Clear admin1 selection since it conflicts with the selected admin0
     setSelectorValue(viewof admin1Select, []);
-    console.log("Cleared admin1 selection");
     return;
   }
 
